--- a/static/index.html
+++ b/static/index.html
@@ -13,8 +13,8 @@
 			</td>
 			<td>
 				<h1 id = "message">Hello World-meijinmeng</h1>
-				<p class='description'></p> Thanks for creating <span class="blue">hello, I am IS hanxianchao </span>. Get started by reading our <a
-				href="https://www.ng.bluemix.net/docs/#starters/go/index.html#go">documentation</a>
+				<p class='description'></p> Thanks for creating <span class="blue">hello, I am IS meijinmeng </span>. Get started by reading our <a
+				href="https://github.com/meijinmeng/jenkins-sample/edit/master/static/index.html">documentation</a>
 				or use the quick start guide under your app in your dashboard.
 			</td>
 		</tr>
